# pysyfy

./: .gitignore  .pre-commit-config.yaml  ArimaModel.py  README.md  base_classes.py  main.py  pyproject.toml  setup.cfg  test_jupyter.ipynb  user_inputs.py
dataset/: LMI.csv  historic_CPI.csv  historic_house_price.csv  historic_interest_rates.csv  simulated_house_price.csv  simulated_interest_rates.csv  user_input_datasheet.csv
pysyfy/: ArimaModel.py  base_classes.py  main.py
tests/: test_pysyfy.py
